--- a/SSISTeam9/SSISTeam9.csproj
+++ b/SSISTeam9/SSISTeam9.csproj
@@ -145,6 +145,7 @@
     </Compile>
     <Compile Include="Models\Data.cs" />
     <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\Requisition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
